# mojo-rust-sdk-v0

./: Cargo.toml
src/: client.rs  error.rs  lib.rs  m_macro.rs  utils.rs  world.rs
src/badges/: asset.rs  mod.rs  types.rs
src/profile/: asset.rs  image.rs  mod.rs  types.rs  uploader.rs
