[package]
name = "mojo-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.2.1"
solana-client = "2.2.1"
solana-program = "2.2.1"
thiserror = "1.0"
solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-native-token = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.1"
solana-message = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-rpc-client = "2.2.1"
solana-address = "1.0.0"
solana-account = "2.2.1"
anyhow = "1.0"
sha2 = "0.10.9"
bytemuck = { version = "1.15", features = ["derive"] }
mpl-core = "0.11.1"
reqwest = { version = "0.11", features = ["json"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tempfile = "3.8"
dirs = "5.0"
arweave-rs = "0.2.0"
url = "2.5"
